# multi-threaded-job-system

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_2_MULTITHREADED_JOB_SYSTEM.md  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  mixed_workload_bench.cpp  scaling_bench.cpp
docs/: ARCHITECTURE.md  LOCKING_STRATEGY.md
examples/: CMakeLists.txt  basic_demo.cpp  drr_demo.cpp  priority_demo.cpp  weighted_demo.cpp
include/job_system/: client_state.h  drr_policy.h  job.h  metrics_observer.h  scheduler.h  scheduling_policy.h  thread_pool.h  wrr_policy.h
src/: CMakeLists.txt  drr_policy.cpp  scheduler.cpp  thread_pool.cpp  wrr_policy.cpp
tests/: CMakeLists.txt  test_milestone1.cpp  test_milestone2.cpp  test_milestone3.cpp  test_milestone4.cpp  test_milestone5.cpp
